# work-tracker

./: Cargo.toml  README.md
src/: .example.json.swp  example.json  format.rs  main.rs  utils.rs
src/commands/: display.rs  edit.rs  mod.rs  pause.rs  start.rs  status.rs  stop.rs  tasks.rs
