[package]
name = "work"
version = "0.1.0"
authors = ["Hayden Mack <hayden.s.mack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI args passing
structopt = "0.3.2"

# Time tracking
chrono = "0.4.9"

# Message pack for storage and transfer format 
rmp-serde = "0.14.0"

