[package]
name = "work"
version = "0.1.0"
authors = ["Hayden Mack <hayden.s.mack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI args passing
structopt = "0.3.3"

# Time tracking
chrono = { version = "0.4.9", features = ["serde"] }

# Message pack for storage and transfer format 
serde = { version = "1.0.104", features = ["derive"] }
rmp-serde = "0.14.0"

# Colored terminal output
colored = "1.8.0"

# To get the home dir
dirs = "2.0.2"
